fixed search input style too dark

--- a/styles/searchOptions.module.scss
+++ b/styles/searchOptions.module.scss
@@ -113,9 +113,9 @@
   }
 
   .searchInput {
-    color: var(--font-color);
-    background: var(--dark-green-color);
-    border: 1px solid var(--lighter-grey-color);
+    color: colors.$font;
+    background: colors.$lighter-bg;
+    border: 1px solid colors.$lighter-grey;
     border-radius: .2em;
     margin-top: .25rem;
     padding: .5rem;
